# oppskrift

./: .dockerignore  .env.example  .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  Procfile  README.md  RustConfig  docker-compose.yml  flake.nix  rustfmt.toml  tailwind.config.js
.cargo/: audit.toml
.githooks/: install.sh  pre-commit
.github/: dependabot.yml
.sqlx/: query-0019d1015b2183120c3f3523748388850e4ac17976d833e823e4a50b4eff749a.json  query-009db4a5653a3a970fc0560d5a4911eeda74d76c63566c04a26d005e9bd6d62a.json  query-01c4ca437acd6cd6e0c8f2a4073395f7be658667226a46449c67e974c8b9a541.json  query-021870464fc35470deea1cece3ccbb581284097f52379434840b06c7036d58f1.json  query-037e284672e2bb4d95d8b0b2b37cff8c938fa9a1baadd2dcd49814514da3ef23.json  query-04c1b002360257c0349eb6baeb73dcf584a284d14c73c3ef50bbbe7e1c2e5857.json  query-04c5595eecd979902c79fbb27848da90159d6d1d279ef7b806fcfd941a3c614f.json  query-07136f23d99c084206684276c34d673cc61065f292c101f6866f7eb765dd4168.json  query-0b2efbfcd01699a8223eb15caf5cfdeb38a86f7d37815145f9a32c2bd5c33d18.json  query-0c31a402006afda7c48407288f7e488c92af8b912f7bff3b2c5b4cb88e2839fd.json  query-0f4674c536800c8035e02397277dd5298c93132aa14395581a255ccc467e1a51.json  query-0f4a84c02f8112968c7489262f96a148eef2ec47781b31ec600f74639480a7e4.json  query-107963719def8fe02a6669f383d84f25febfb6da762bcbea246ba2d40bbe9d1b.json  query-147df67aca648159d689c329a389f28fa7af9492103e09c61c50993067ce4f54.json  query-149f31f5bb79e4dfcf55f521c40eb23c25dde44fa6ce4f76bcd101f26b0f5d91.json  query-172ff6257b56d184c400730d20daa27351b2d9ef25b1b76414dddc08ba45094a.json  query-1942d37c1ceb3a2472fa649b63267063ca9bd1eefa85748a9858dd6e6e3c826e.json  query-1a316e860eb5d8da573f0f673fb4de5b2a0c73eb5b5dd5416135c7da2f7d8d39.json  query-1d45cd86d9949e61582cd69ae40aecfe9c93d7d4b2f01ef6d0d7d0b7edb9ac3b.json  query-1df433e5c22723d87936a49bfe88594d5b756331067d1e985f1a2bb3940a93f1.json  query-21c2a3f6c53672b9166de8453e76ad3c08f444d63a6c0197837c9b0b03e0c908.json  query-23a3f51832d57b9ee0ddadd46fe352349904fe491ed780e69a81f4cad368320e.json  query-250dc6a2d1f24471a70df1bcdcbc938c130a71bc4aae63927a4233de7aa5365d.json  query-260ba3d2872c39e3fed98615a6a2ae3fea41714c50e66b5b1241901e2eac3197.json  query-265d433189120bb68228ed0acc2dfce4130a2146e12d012a5e27632ddbb04ce0.json  query-27922781a7f81d390ec2777c234aecd865df2f6b5955ea641c6d68f8438086b1.json  query-280f332faf65118b1b6c6a6dafbf30e3698aa0b5e2387ef715b4c387239ebd0b.json  query-2885f261f62a0dd0f52ec4cae781f34577fe2eafc95b44ec173eed8d6cb7155c.json  query-2a5f3ea1fad9de51b63e74dca1580efd4fd3c6264685feecb8cd6b484ac436a0.json  query-2d1cc0fde95df654f0a8d621ffd6937b238fb2b41f79df49db75bbcbc1cb0a4e.json  query-2dc75801713f86cee3d857124d3d52233573504cb02254ec4c3b495b211e59c2.json  query-2eea70b6b4fcbbf199b4856ab1fe7346bc0bd597a6b36edd581c4a675ae413dd.json  query-309dbd73bbe7b9415465efb8aa78d24178cf5ab32d6cfb7fa5a27be603cedf2c.json  query-31280c233b3de94a52b919caf76ab04954f4f185d9b764592beaa70fdc7134a3.json  query-314b0cc3b5d9403b87e0afe17fc5cfc7119cfd9b64eeac910e68a959c0b6eda3.json  query-33912a2f315af90cc79c6a83dc819d8eb1c375730f2b5e4e21b81e4d6620e3dd.json  query-3650377ca742e15053d1ec87633a37d2f0ed3a15d7c12de2bb70de682600974b.json  query-3a3b03bcd05414694a550a1abcdba2d3e32caeaec90f80c14b587186472484df.json  query-3b7f61d810f86f760107cfb1762c7bc9db22ce9fb72e0803e3fbb132cf722bc3.json  query-3bf5573908c98b7802f39f8c6ab9e56552b543cc0967994ff37a61c5c2c498b2.json  (+137 more)
docs/: DEAD_CODE_TASKS.md
migrations/: 20251225000001_create_enums.sql  20251225000002_create_users.sql  20251225000003_create_recipes.sql  20251225000004_create_ingredients.sql  20251225000005_create_instruction_steps.sql  20251225000006_create_recipe_images.sql  20251225000007_create_recipe_books.sql  20251225000008_create_book_recipe_entries.sql  20251225000009_create_follows.sql  20251225000010_create_saved_recipes.sql  20251225000011_create_activities.sql  20251225000012_create_indexes.sql  20251226000013_create_user_keys.sql  20251226000014_add_federation_enabled.sql  20251226000015_auth_users.sql  20251226000016_sessions.sql  20251226000017_tokens.sql  20251226000018_recovery_codes.sql  20251226000019_security_events.sql  20251227000001_two_factor_pending.sql  20251229000001_add_deletion_content_choice.sql  20251230000001_add_visibility_followers_only.sql  20251230000002_create_groups_table.sql  (+7 more)
(+301 files in other folders)
