[package]
name = "oppskrift"
version = "0.1.0"
edition = "2024"
description = "A federated social platform for sharing recipes via ActivityPub"
license = "AGPL-3.0-or-later"
repository = "https://github.com/scttpr/oppskrift"
authors = ["scttpr"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# ActivityPub federation
activitypub_federation = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templating
askama = "0.12"
askama_axum = "0.4"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal numbers
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Image processing
image = "0.25"

# S3-compatible storage
aws-sdk-s3 = "1"
aws-config = "1"

# Configuration
dotenvy = "0.15"

# Base64 encoding
base64 = "0.22"

# HTTP client for federation
reqwest = { version = "0.12", features = ["json"] }

# Rate limiting
tower_governor = "0.4"

# JWT (auth middleware stub)
jsonwebtoken = "9"

[dev-dependencies]
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

[profile.release]
lto = true
strip = true
