[package]
name = "oppskrift"
version = "0.1.0"
edition = "2021"
description = "A federated social platform for sharing recipes via ActivityPub"
license = "AGPL-3.0-or-later"
repository = "https://github.com/scttpr/oppskrift"
authors = ["scttpr"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal", "ipnetwork"] }

# ActivityPub federation
activitypub_federation = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templating
askama = "0.15"
askama_axum = "0.4"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal numbers
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Image processing (excludes unmaintained avif/ravif)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# S3-compatible storage
aws-sdk-s3 = "1"
aws-config = "1"

# Configuration
dotenvy = "0.15"

# Base64 encoding
base64 = "0.22"

# HTTP client for federation
reqwest = { version = "0.12", features = ["json"] }

# Rate limiting
tower_governor = "0.8"

# JWT (auth middleware stub)
jsonwebtoken = "9"

# RSA key generation for ActivityPub signatures
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"

# Authentication
argon2 = "0.5"
bcrypt = "0.17"
totp-rs = { version = "5", features = ["qr", "otpauth", "serde_support", "gen_secret"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
aes-gcm = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1"
regex = "1"
hmac = "0.12.1"
html-escape = "0.2.13"

[dev-dependencies]
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
axum-test = "18"
reqwest = { version = "0.12", features = ["json", "cookies"] }
cookie = "0.18.1"

[profile.release]
lto = true
strip = true
